fixed the size of the cover text box as the sticky nav bar caused issues with this. Added a new image into the gallery - Will fix white space issue with the gallery soon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,7 @@ nav li a:hover {
   height: 35vh;
   position: relative;
   z-index: 0;
+  
 }
 
 @media screen and (max-width: 1200px) {
@@ -123,6 +124,7 @@ nav li a:hover {
     position: relative;
     z-index: 0;
     padding-bottom: 15%;
+   
   }
 }
 
@@ -231,7 +233,8 @@ nav li a:hover {
     z-index: 1;
     left: 20px;
     contain: content;
-    top: 25px;
+    top: 30px;
+   margin-top: 35px;
   }
 }
 
@@ -332,11 +335,11 @@ nav li a:hover {
   padding: 0;
   width: 100%;
   height: 30vh;
-  border-radius: 5px;
+ 
 }
 
 .the-views {
-    position: relative;
+  position: relative;
   color: black;
   padding: 0;
   width: 100%;
@@ -353,7 +356,7 @@ nav li a:hover {
   width: 100%;
   height: 30vh;
   position: relative;
-  border-radius: 5px;
+  
 }
 
 .culture {
@@ -374,7 +377,7 @@ nav li a:hover {
   width: 100%;
   height: 30vh;    
   position: relative;
-  border-radius: 5px;
+  
 }
 
 .things-to-do {
@@ -395,7 +398,7 @@ nav li a:hover {
   width: 100%;
   height: 30vh;  
   position: relative;
-  border-radius: 5px;
+  
 }
 
 .opaque-overlay{
@@ -409,7 +412,7 @@ nav li a:hover {
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 2;
   position: relative;
-  border-radius: 5px;
+  
 }
 
 @media screen and (min-width: 601px) {
@@ -528,6 +531,12 @@ footer ul {
   }
 }
 
+/* ------------------------ Copyright */
+
+.copyright{
+    text-align: center;
+}
+
 /* ------------------------ Gallery */
 
 /* -------------------- ADD HOVER ANIMATIONS TO PICTURES DESCRIBING THEM */
@@ -535,12 +544,16 @@ footer ul {
 .images {
   clear: both;
   line-height: 0;
-  column-count: 4;
+  column-count: 3;
   column-gap: 0px;
+  flex-flow: column wrap;
+  max-width: 100%;
+  
 }
 .images img {
   width: 100%;
   border: 0.5px solid #fafafa;
+  max-height: 100%;
 }
 
 @media screen and (max-width: 800px) {
